# llm-debate-hall

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
llm_debate_hall/: __init__.py  engine.py  events.py  main.py  models.py  personas.py  storage.py
llm_debate_hall/adapters/: __init__.py  base.py  mock_adapter.py  subprocess_adapter.py
llm_debate_hall/static/: app.js  index.html  styles.css
tests/: test_api.py  test_engine.py  test_storage.py  test_subprocess_adapter.py
